--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -8,3 +8,10 @@
 //$heading-font-family: "Verdana", sans-serif;
 //$header-title-font-family: "Futura", sans-serif;
 //$header-subtitle-font-family: "Futura", sans-serif;
+
+$sans: "Ubuntu", "PT Sans", "Helvetica Neue", Arial, sans-serif !default;
+$serif: "Ubuntu", "PT Serif", Georgia, Times, "Times New Roman", serif !default;
+$mono: Menlo, Monaco, "Andale Mono", "lucida console", "Courier New", monospace !default;
+$heading-font-family: $sans;
+$header-title-font-family: $heading-font-family !default;
+$header-subtitle-font-family: $heading-font-family !default;
