HTTP (no S) URL to ctln.pw

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
-        <a class="page-link" href="//{{ site.main_domain }}" target="_blank">About me</a>
+        <a class="page-link" href="{{ site.main_url }}" target="_blank">About me</a>
       </div>
     </nav>
 
